# demo-agents

./: .gitignore  README.md
.github/workflows/: lint.yaml
agents/: Makefile
agents/fast-agent/: Makefile
agents/fast-agent/deploy/compose/: .env.template  docker-compose-dev.yml  docker-compose.tls.yml  docker-compose.yml  run-local.sh
agents/fast-agent/deploy/config/: manifest.yaml
agents/fast-agent/deploy/k8s/: status.sh
agents/fast-agent/src/agent/: pyproject.toml
agents/fast-agent/src/agent/alembic/: env.py
agents/fast-agent/src/agent/alembic/versions/: initial_migration.py
agents/fast-agent/src/agent/app/: main.py
agents/fast-agent/src/agent/app/api/: auth.py
agents/fast-agent/src/agent/app/api/routes/: chat.py
agents/fast-agent/src/agent/app/core/: config.py  exporter.py  security.py
agents/fast-agent/src/agent/app/db/: database.py  init_db.py
agents/fast-agent/src/agent/app/models/: chat.py
agents/fast-agent/src/agent/app/schemas/: chat.py
agents/fast-agent/src/agent/app/services/: agent_service.py  chat_service.py
agents/fast-agent/src/agent/tests/: conftest.py  test_chat.py
agents/fast-agent/src/ui/: eslint.config.js  package-lock.json  package.json
agents/google_adk/: Makefile  README.md
agents/google_adk/deploy/compose/: .env.template  docker-compose.yml
agents/google_adk/deploy/config/: configure.sh  manifest.yaml
agents/google_adk/deploy/k8s/: deploy-app.sh  deploy-app.yaml  deploy.sh  deploy_ingress.sh
agents/google_adk/deploy/manifest/: acuctl-import.yaml
agents/google_adk/src/agent/: config.yaml  main.py  pyproject.toml
agents/google_adk/src/agent/config/: __init__.py  config.py
agents/google_adk/src/agent/g_runtime/: __init__.py  agent.py
agents/google_adk/src/agent/observability/: exporter.py  otel.py
agents/google_adk/src/agent/runtime/: __init__.py  runtime.py
agents/google_adk/src/agent/utils/: __init__.py  exporter.py  load_config.py  otel.py
agents/ibac-demo/: .gitignore  Makefile  README.md  ibac-manifest.yaml  pyproject.toml  run.sh  run_ui.sh
agents/ibac-demo/deploy/: README.md
agents/ibac-demo/deploy/compose/: .env.template  README.md  docker-compose.yml
agents/ibac-demo/deploy/config/: manifest.yaml  providers-openrouter.yaml
agents/ibac-demo/deploy/k8s/: README.md  deploy-ibac-demo.sh  deploy.sh  example-values.yaml
agents/ibac-demo/docs/: demo.html  generate_demo.py  test-scenarios.md
agents/ibac-demo/prompt-scenarios/: simple-prompts.txt
agents/ibac-demo/src/agent/: .dockerignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json  run.sh  run_ui.sh  server.py
agents/ibac-demo/src/agent/docs/: demo.html  generate_demo.py  test-scenarios.md
agents/ibac-demo/src/agent/runtime/: __init__.py  runtime.py
agents/ibac-demo/src/agent/tests/: README.md  demo_detection.py  model_comparison.py
agents/ibac-demo/src/agent/tools/: local_tools.py  mcp_tools.py
agents/ibac-demo/src/agent/utils/: acuvity_errors.py  agent_graph.py  config.py  debug.py  demo_prompts_ui.py  paths.py  prompts.py
agents/ibac-demo/src/ui/: .dockerignore  Dockerfile
agents/ibac-demo/tests/: comparison-results.md
agents/ibac-demo/tools/: local_tools.py
agents/ibac-demo/ui/chat_ui/: vite.config.ts
agents/ibac-demo/utils/: debug.py  prompts.py
agents/langgraph/: Makefile  README.md  langgraph_k8s_commands.txt
agents/langgraph/deploy/compose/: docker-compose.yml
agents/langgraph/deploy/config/: manifest.yaml
agents/langgraph/deploy/k8s/: deploy.sh
agents/langgraph/deploy/vm/: 01-base-setup.sh  02-apex-install.sh  (+1 more)
agents/langgraph/src/agent/: Dockerfile  config.yaml  main.py  pyproject.toml
agents/langgraph/src/agent/config/: config.py
agents/langgraph/src/agent/observability/: otel.py
agents/langgraph/src/agent/runtime/: __init__.py  runtime.py
agents/openai-sdk/docker/: app.Dockerfile
agents/openai-sdk/src/: .dockerignore
agents/openai_sdk/: Makefile  README.md
agents/openai_sdk/src/agent/: Dockerfile  config.yaml  main.py  pyproject.toml
agents/openai_sdk/src/agent/config/: __init__.py  config.py
agents/openai_sdk/src/agent/observability/: __init__.py  otel.py
agents/openai_sdk/src/agent/runtime/: __init__.py  runtime.py
agents/simple-langgraph/: Makefile  README.md  config.yaml  main.py  prompts.txt  pyproject.toml  run.sh  run_and_score.sh  server.py
agents/simple-langgraph/assets/: Q4_Operations_Report.docx
agents/simple-langgraph/config/: __init__.py  config.py
agents/simple-langgraph/docs/: benchmark_scores.csv  benchmark_scores.md  demo.html  generate_demo.py  model_comparison.md  results.md  scores.md  test-scenarios.md
agents/simple-langgraph/observability/: otel.py
agents/simple-langgraph/prompt-scenarios/: advanced-prompts.txt  demo-prompts.txt  demo-scenarios.json  demo7-pdf-body.txt  scenario-prompts.txt
agents/simple-langgraph/tests/: README.md  comparison-results.md  demo-detection-results.md  demo_7.txt  demo_detection.py  intent_score.py  model_comparison.py  score_results.py
agents/simple-langgraph/tools/: local_tools.py
agents/simple-langgraph/ui/chat_ui/: index.html
agents/simple-langgraph/ui/chat_ui/src/: App.tsx
agents/simple-langgraph/utils/: config.py  debug.py  prompts.py
certs/: ca-cert.pem  ca-key.pem
google_adk/backend/: .gitignore  agent.py  config.yaml  main.py  requirements.txt
google_adk/backend/g_runtime/: __init__.py  agent.py
google_adk/backend/utils/: __init__.py  agent_response.py  mcp_conn.py  otel.py
google_adk/ui/chat_ui/: package-lock.json  package.json  vite.config.ts
infra/cli/: README.md
infra/ingress/: README.md  deploy_agent_ingress.sh  deploy_ingress_controller.sh  ingress-template.yaml
infra/k8s/: deploy-apex.sh  status.sh
infra/sandbox/: README.md
infra/vm/: install.sh
openai-sdk/: Makefile  README.md
openai-sdk/src/app/: __init__.py  config.yaml  pyproject.toml
openai-sdk/src/app/api/: __init__.py  deps.py
openai-sdk/src/app/config/: __init__.py  loader.py
openai-sdk/src/app/observability/: __init__.py  logging_utils.py  otel.py
openai-sdk/src/app/runtime/: __init__.py
(+80 files in other folders)
