[project]
name = "simple-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-core>=1.2.21",
    "langchain-openrouter>=0.0.1",
    "fastmcp>=2.0.0",
]
pythonVersion = "3.12"
