[project]
name = "simple-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp", 
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-core>=1.2.21",
    "openinference-instrumentation-anthropic",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-mcp",
    "openinference-instrumentation-openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-system-metrics",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-sdk",
]
pythonVersion = "3.12"
