[project]
name = "GoogleADKAgent"
version = "0.1.0"
description = "An agent built using the Google ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",          # used by google-adk and not directly imported in our code
    "fastapi",
    "google-adk[otel-gcp,extensions]",
    "openinference-instrumentation-anthropic",
    "openinference-instrumentation-google-adk",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-mcp",
    "openinference-instrumentation-openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-system-metrics",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-sdk",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "starlette",
    "uvicorn",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "aiohttp",          # used by google-adk and not directly imported in our code
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
