[project]
name = "simple-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-core>=1.2.21",
    "langchain-openrouter>=0.2.1",
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "langchain-openai>=1.1.12",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pypdf>=5.0.0",
    "pydantic>=2.0",
    "starlette>=0.27.0",
]

# Ruff: use `uv run --with ruff ruff` if needed; not a runtime import.

[tool.deptry.per_rule_ignores]
DEP002 = [
    "fastmcp",       # runtime import is `mcp.*` (MCP SDK); deptry maps the dist as fastmcp only
    "torch",         # imported from tests/*.py; deptry default exclude omits tests/
    "transformers",
]

[tool.pyright]
pythonVersion = "3.12"
