[project]
name = "LanggraphAgent"
version = "0.1.0"
description = "An agent built using Langgraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",          # used by google-adk and not directly imported in our code
    "fastapi",
    "langchain-anthropic",
    "langchain-core",
    "langchain-mcp-adapters",
    "langgraph",
    "openinference-instrumentation-anthropic",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-mcp",
    "openinference-instrumentation-openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-system-metrics",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-sdk",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "starlette",
    "uvicorn",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "aiohttp",          # used by google-adk and not directly imported in our code
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
