[project]
name = "OpenAISDKAgent"
version = "0.1.0"
description = "An agent that is built using the OpenAI SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",          # used by google-adk and not directly imported in our code
    "fastapi",
    "openai-agents",
    "openai-agents[litellm]",
    "openinference-instrumentation-anthropic",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-mcp",
    "openinference-instrumentation-openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-system-metrics",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-sdk",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "uvicorn"
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "aiohttp",          # used by google-adk and not directly imported in our code
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
